--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,5 @@
-/*  your css code here. If applicable */
+//your JS code here. If required.
+function removeCol(){
+	let x = document.getElementById("colorSelect");
+	x.remove(x.selectedIndex)
+}
